--- a/PythonBasics_1.ipynb
+++ b/PythonBasics_1.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Keyword Practice"
+    "# Python\n",
+    "\n",
+    "- Python is a powerful multi-purpose programming language created by Guido van Rossum.\n",
+    "- Python is a general-purpose interpreted, interactive, object-oriented, and high-level programming language."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Keyword\n",
+    "\n",
+    "- Keywords are the reserved words in Python.\n",
+    "- We cannot use a keyword as a variable name, function name or any other identifier. They are used to define the syntax and structure of the Python language."
    ]
   },
   {
@@ -51,7 +64,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Identifier Practice"
+    "# 2. Identifier\n",
+    "\n",
+    "- A Python identifier is a name used to identify a variable, function, class, module or other object. An identifier starts with a letter A to Z or a to z or an underscore (_) followed by zero or more letters, underscores and digits (0 to 9).\n",
+    "- Python does not allow punctuation characters such as @, $, and % within identifiers.\n",
+    "- Keywords cannot be used as identifiers. "
    ]
   },
   {
@@ -127,14 +144,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Comments in Python"
+    "# 3. Comments in Python\n",
+    "\n",
+    "- Comments are very important while writing a program. It describes what's going on inside a program so that a person looking at the source code does not have a hard time figuring it out."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This is a single line comment"
+    "### 3.1 This is a single line comment"
    ]
   },
   {
@@ -151,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  This is a multi line comment"
+    "###  3.2 This is a multi line comment"
    ]
   },
   {
@@ -202,13 +221,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Docstring\n",
+    "### 3.3 Docstring\n",
     "\n",
-    "##### Python documentation strings (or docstrings) provide a convenient way of associating documentation with Python modules, functions, classes, and methods. \n",
+    "- Python documentation strings (or docstrings) provide a convenient way of associating documentation with Python modules, functions, classes, and methods. \n",
     "\n",
-    "##### An object's docsting is defined by including a string constant as the first statement in the object's definition. \n",
+    "- An object's docsting is defined by including a string constant as the first statement in the object's definition. \n",
     "\n",
-    "##### It's specified in source code that is used, like a comment, to document a specific segment of code."
+    "- It's specified in source code that is used, like a comment, to document a specific segment of code."
    ]
   },
   {
@@ -265,11 +284,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 4. Python Indentation\n",
+    "\n",
+    "- Most of the programming languages like C, C++, Java use braces { } to define a block of code. Python uses indentation.\n",
+    "- A code block (body of a function, loop etc.) starts with indentation and ends with the first unindented line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    print(i)\n",
+    "    if i == 5:\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
