--- a/PythonBasics_1.ipynb
+++ b/PythonBasics_1.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Python\n",
     "\n",
+    "Document prepared by: Purnanda Behera\n",
+    "\n",
     "- Python is a powerful multi-purpose programming language created by Guido van Rossum.\n",
     "- Python is a general-purpose interpreted, interactive, object-oriented, and high-level programming language."
    ]
@@ -436,6 +438,411 @@
     "          'green']\n",
     "\n",
     "print(colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Variables\n",
+    "\n",
+    "- A variable is a named location used to store data in the memory.\n",
+    "- Python variables do not need explicit declaration to reserve memory space. The declaration happens automatically when you assign a value to a variable. The equal sign (=) is used to assign values to variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "1000.0\n",
+      "John\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 100          # An integer assignment\n",
+    "miles   = 1000.0       # A floating point\n",
+    "name    = \"John\"       # A string\n",
+    "\n",
+    "print(counter)\n",
+    "print(miles)\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1 Multiple Assignment\n",
+    "\n",
+    "- Python allows you to assign a single value to several variables simultaneously. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 john\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = b = c = 1\n",
+    "\n",
+    "print(a, b)\n",
+    "\n",
+    "a,b,c = 1,2,\"john\"\n",
+    "\n",
+    "print(b, c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 Standard Data Types\n",
+    "\n",
+    "- The data stored in memory can be of many types.\n",
+    "- Python has five standard data types:\n",
+    "    - Numbers\n",
+    "    - String\n",
+    "    - List\n",
+    "    - Tuple\n",
+    "    - Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.1 Data Types - Numbers\n",
+    "\n",
+    "- Number data types store numeric values. Number objects are created when you assign a value to them. \n",
+    "- Python supports four different numerical types: \n",
+    "    - int (signed integers)\n",
+    "    - long (long integers, they can also be represented in octal and hexadecimal)\n",
+    "    - float (floating point real values)\n",
+    "    - complex (complex numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 is of type <class 'int'>\n",
+      "2.0 is of type <class 'float'>\n",
+      "(1+2j) is complex number? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "print(a, \"is of type\", type(a))\n",
+    "\n",
+    "a = 2.0\n",
+    "print(a, \"is of type\", type(a))\n",
+    "\n",
+    "a = 1+2j\n",
+    "print(a, \"is complex number?\", isinstance(1+2j,complex))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.2 Data Types - String\n",
+    "\n",
+    "- String is sequence of Unicode characters. We can use single quotes or double quotes to represent strings. \n",
+    "- Multi-line strings can be denoted using triple quotes, ''' or \"\"\".\n",
+    "- Subsets of strings can be taken using the slice operator ([ ] and [:] ) with indexes starting at 0 in the beginning of the string and working their way from -1 at the end."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "H\n",
+      "llo\n",
+      "llo World!\n",
+      "Hello World!Hello World!\n",
+      "Hello World!TEST\n"
+     ]
+    }
+   ],
+   "source": [
+    "myStr = 'Hello World!'\n",
+    "\n",
+    "print(myStr)          # Prints complete string\n",
+    "print(myStr[0])       # Prints first character of the string\n",
+    "print(myStr[2:5])     # Prints characters starting from 3rd to 5th\n",
+    "print(myStr[2:])      # Prints string starting from 3rd character\n",
+    "print(myStr * 2)      # Prints string two times\n",
+    "print(myStr + \"TEST\") # Prints concatenated string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.3 Data Types - List\n",
+    "\n",
+    "- List is an ordered sequence of items. It is one of the most used datatype in Python and is very flexible. \n",
+    "- All the items in a list do not need to be of the same type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a[2] =  15\n",
+      "a[0:3] =  [5, 10, 15]\n",
+      "a[5:] =  [30, 35, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [5,10,15,20,25,30,35,40]\n",
+    "\n",
+    "# a[2] = 15\n",
+    "print(\"a[2] = \", a[2])\n",
+    "\n",
+    "# a[0:3] = [5, 10, 15]\n",
+    "print(\"a[0:3] = \", a[0:3])\n",
+    "\n",
+    "# a[5:] = [30, 35, 40]\n",
+    "print(\"a[5:] = \", a[5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abcd', 786, 2.23, 'john', 70.2]\n",
+      "abcd\n",
+      "[786, 2.23]\n",
+      "[2.23, 'john', 70.2]\n",
+      "[123, 'john', 123, 'john']\n",
+      "['abcd', 786, 2.23, 'john', 70.2, 123, 'john']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [ 'abcd', 786 , 2.23, 'john', 70.2 ]\n",
+    "tinylist = [123, 'john']\n",
+    "\n",
+    "print(list)          # Prints complete list\n",
+    "print(list[0])       # Prints first element of the list\n",
+    "print(list[1:3])     # Prints elements starting from 2nd till 3rd \n",
+    "print(list[2:])      # Prints elements starting from 3rd element\n",
+    "print(tinylist * 2)  # Prints list two times\n",
+    "print(list + tinylist) # Prints concatenated lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.4 Data Types - Tuples\n",
+    "\n",
+    "- Tuple is an ordered sequence of items same as list.The only difference is that tuples are immutable. Tuples once created cannot be modified.\n",
+    "- It is defined within parentheses () where items are separated by commas.\n",
+    "- The main differences between lists and tuples are: Lists are enclosed in brackets ( [ ] ) and their elements and size can be changed, while tuples are enclosed in parentheses ( ( ) ) and cannot be updated. \n",
+    "- Tuples can be thought of as read-only lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t[1] =  program\n",
+      "t[0:3] =  (5, 'program', (1+3j))\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-35-4413355158bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Generates error\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Tuples are immutable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t = (5,'program', 1+3j)\n",
+    "\n",
+    "# t[1] = 'program'\n",
+    "print(\"t[1] = \", t[1])\n",
+    "\n",
+    "# t[0:3] = (5, 'program', (1+3j))\n",
+    "print(\"t[0:3] = \", t[0:3])\n",
+    "\n",
+    "# Generates error\n",
+    "# Tuples are immutable\n",
+    "t[0] = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.5 Data Types - Dictionary\n",
+    "\n",
+    "- Dictionary is an unordered collection of key-value pairs.\n",
+    "- It is generally used when we have a huge amount of data. Dictionaries are optimized for retrieving data. We must know the key to retrieve the value.\n",
+    "- In Python, dictionaries are defined within braces {} with each item being a pair in the form key:value. Key and value can be of any type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "d[1] =  value\n",
+      "d['key'] =  2\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-760e76ef5f4b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# Generates error, there is no key as 2.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"d[2] = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 2"
+     ]
+    }
+   ],
+   "source": [
+    "d = {1:'value','key':2}\n",
+    "print(type(d))\n",
+    "\n",
+    "print(\"d[1] = \", d[1]);\n",
+    "\n",
+    "print(\"d['key'] = \", d['key']);\n",
+    "\n",
+    "# Generates error, there is no key as 2.\n",
+    "print(\"d[2] = \", d[2]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is one\n",
+      "This is two\n",
+      "{'name': 'john', 'code': 6734, 'dept': 'sales'}\n",
+      "dict_keys(['name', 'code', 'dept'])\n",
+      "dict_values(['john', 6734, 'sales'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {}\n",
+    "dict['one'] = \"This is one\"\n",
+    "dict[2]     = \"This is two\"\n",
+    "\n",
+    "tinydict = {'name': 'john','code':6734, 'dept': 'sales'}\n",
+    "\n",
+    "\n",
+    "print(dict['one'])       # Prints value for 'one' key\n",
+    "print(dict[2])           # Prints value for 2 key\n",
+    "print(tinydict)          # Prints complete dictionary\n",
+    "print(tinydict.keys())   # Prints all the keys\n",
+    "print(tinydict.values()) # Prints all the values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.6 Conversion between data types\n",
+    "\n",
+    "- We can convert between different data types by using different type conversion functions like int(), float(), str() etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "10\n",
+      "25\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-aa55b57c7c34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# convert integer type to string\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"25\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# convert string type to integer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'1p'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Generates error, '1p' is not a valid integer type which cannot convert to int.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1p'"
+     ]
+    }
+   ],
+   "source": [
+    "print(float(5))  # convert integer type to float\n",
+    "print(str(10))   # convert integer type to string\n",
+    "print(int(\"25\"))   # convert string type to integer\n",
+    "print(int('1p')) # Generates error, '1p' is not a valid integer type which cannot convert to int."
    ]
   }
  ],
