--- a/PythonBasics_1.ipynb
+++ b/PythonBasics_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python\n",
+    "# Python - Basics - 1\n",
     "\n",
     "Document prepared by: Purnanda Behera\n",
     "\n",
@@ -343,101 +343,6 @@
     "\n",
     "print(x)    \n",
     "func1(10, 20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Python Statement\n",
-    "\n",
-    "- Instructions that a Python interpreter can execute are called statements. For example, a = 1 is an assignment statement. \n",
-    "- if statement, for statement, while statement etc. are other kinds of statements which will be discussed later."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5.1 Multi-line statement\n",
-    "- In Python, end of a statement is marked by a newline character. But we can make a statement extend over multiple lines with the line continuation character (\\). For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60\n"
-     ]
-    }
-   ],
-   "source": [
-    "number = 10 + \\\n",
-    "         20 + \\\n",
-    "         30\n",
-    "\n",
-    "print(number)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- This is explicit line continuation. In Python, line continuation is implied inside parentheses ( ), brackets [ ] and braces { }. For instance, we can implement the above multi-line statement as"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = (1 + 2 + 3 +\n",
-    "    4 + 5 + 6 +\n",
-    "    7 + 8 + 9)\n",
-    "\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Here, the surrounding parentheses ( ) do the line continuation implicitly. Same is the case with [ ] and { }. For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['red', 'blue', 'green']\n"
-     ]
-    }
-   ],
-   "source": [
-    "colors = ['red',\n",
-    "          'blue',\n",
-    "          'green']\n",
-    "\n",
-    "print(colors)"
    ]
   },
   {
@@ -843,6 +748,193 @@
     "print(str(10))   # convert integer type to string\n",
     "print(int(\"25\"))   # convert string type to integer\n",
     "print(int('1p')) # Generates error, '1p' is not a valid integer type which cannot convert to int."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Python Statement\n",
+    "\n",
+    "- Instructions that a Python interpreter can execute are called statements. For example, a = 1 is an assignment statement. \n",
+    "- if statement, for statement, while statement etc. are other kinds of statements which will be discussed later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1 Multi-line statement\n",
+    "- In Python, end of a statement is marked by a newline character. But we can make a statement extend over multiple lines with the line continuation character (\\). For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 10 + \\\n",
+    "         20 + \\\n",
+    "         30\n",
+    "\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This is explicit line continuation. In Python, line continuation is implied inside parentheses ( ), brackets [ ] and braces { }. For instance, we can implement the above multi-line statement as"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1 + 2 + 3 +\n",
+    "    4 + 5 + 6 +\n",
+    "    7 + 8 + 9)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Here, the surrounding parentheses ( ) do the line continuation implicitly. Same is the case with [ ] and { }. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['red', 'blue', 'green']\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = ['red',\n",
+    "          'blue',\n",
+    "          'green']\n",
+    "\n",
+    "print(colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Output Formatting\n",
+    "\n",
+    "- Sometimes we would like to format our output to make it look attractive. This can be done by using the str.format() method. This method is visible to any string object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of x is 5 and y is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5; y = 10\n",
+    "\n",
+    "print('The value of x is {} and y is {}'.format(x,y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love bread and butter\n",
+      "I love butter and bread\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('I love {0} and {1}'.format('bread','butter'))\n",
+    "# Output: I love bread and butter\n",
+    "\n",
+    "print('I love {1} and {0}'.format('bread','butter'))\n",
+    "# Output: I love butter and bread"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello John, Goodmorning\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello {name}, {greeting}'.format(greeting = 'Goodmorning', name = 'John'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+3.400000\n",
+      "-3.400000\n",
+      "3.400000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show the signs\n",
+    "\n",
+    "print(\"{:+f}\".format(3.4))\n",
+    "\n",
+    "print(\"{:+f}\".format(-3.4))\n",
+    "\n",
+    "print(\"{:f}\".format(3.4))"
    ]
   }
  ],
