Fibonacci program added

--- a/Pattern_Programming_Python.ipynb
+++ b/Pattern_Programming_Python.ipynb
@@ -178,6 +178,46 @@
     "    print(i, end =\" \") # print in same line.\n",
     "    print(\"\\n\") # create a new line."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fibonacci series \n",
+    "- Fibonacci series is defined as a sequence of numbers in which the first two numbers are 1 and 1, or 0 and 1, depending on the selected beginning point of the sequence, and each subsequent number is the sum of the previous two.\n",
+    "- Fibonacci Example: 0 1 1 2 3 5 8 13 21 34 55 89 144 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 "
+     ]
+    }
+   ],
+   "source": [
+    "# Fibonacci Programming\n",
+    "\n",
+    "def Fibonacci(n):\n",
+    "    i, a, b, show = 0, 0, 1, 0\n",
+    "    \n",
+    "    print(a,b, end =\" \")\n",
+    "    \n",
+    "    while ((a+b) < n):\n",
+    "        show = a + b\n",
+    "        a = b\n",
+    "        b = show\n",
+    "        print(show, end =\" \")\n",
+    "        # i = i + 1\n",
+    "\n",
+    "Fibonacci(200)"
+   ]
   }
  ],
  "metadata": {
