--- a/Pattern_Programming_Python.ipynb
+++ b/Pattern_Programming_Python.ipynb
@@ -218,6 +218,53 @@
     "\n",
     "Fibonacci(200)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prime Numbers\n",
+    "- A prime number is a whole number greater than 1, which is only divisible by 1 and itself. \n",
+    "- First few prime numbers are : 2 3 5 7 11 13 17 19 23..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 23\n",
+      "23 is a prime no.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def PrimeCheck(num):\n",
+    "    \"\"\"\n",
+    "    PrimeCheck: This function check the input number is a prime number or not.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if(num <= 1):\n",
+    "        print(\"{0} is not a prime no.\".format(num))\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(2,num):\n",
+    "        if(num % i == 0):\n",
+    "            print(\"{0} is not a prime no.\".format(num))\n",
+    "            return\n",
+    "    \n",
+    "    print(\"{0} is a prime no.\".format(num))\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# Call the prime check function.\n",
+    "PrimeCheck(int(input(\"Enter a number: \")))\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
